updating client
